--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "predeploy": "npm run build"
   },
   "dependencies": {
+    "json-editor-vue": "^0.15.0",
     "jsonata": "^2.0.4",
     "vue": "^3.4.21"
   },
